Changed the customer responses documentation
